--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         document.getElementById("egg").classList.add("cracked");
         document.getElementById("messageBox").style.display = "block";
       } else {
-        alert("Too early! Wait until May 6th 🎀");
+        alert("Too early! Come back on April 12th 💖");
       }
     }
   </script>
