--- a/index.html
+++ b/index.html
@@ -56,7 +56,9 @@
 
   <div class="message-box" id="messageBox">
     <p>✨ Happy 18th Birthday, Princess! ✨</p>
-    <p>[Leave space for your messages here]</p>
+    <p> you're the light to my soul and glitter to my glue, my queen, my heart. omg you're 18 my beautiful diva </p>
+     <p>💌 With love, from the person who adore you the most 💖</p>
+    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/2Gv9ICAKcsBFq1DWHyprZ6?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
   </div>
 
   <script>
