--- a/index.html
+++ b/index.html
@@ -58,10 +58,13 @@
     <p>✨ Happy 18th Birthday, Princess! ✨</p>
     <p> you're the light to my soul and glitter to my glue, my queen, my heart. omg you're 18 my beautiful diva </p>
      <p>💌 With love, from the person who adore you the most 💖</p>
+    
+  <p> here's a small 18th birthday playlist with 18 meaningful songs for my love <p>
     <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/2Gv9ICAKcsBFq1DWHyprZ6?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
- <!-- 🎂 Birthday Memes -->
-<div style="display: flex; flex-wrap: wrap; gap: 15px; justify-content: center; margin-top: 20px;">
-
+    <!-- 🎂 Birthday Memes -->
+    <div style="display: flex; flex-wrap: wrap; gap: 15px; justify-content: center; margin-top: 20px;">
+      
+<p> some very deep and meaningful facts (memes), personally made for the apple of my eye,mwah! <p>
   <img src="https://i.postimg.cc/nMYj3XWk/Whats-App-Image-2025-04-12-at-8-11-47-PM.jpg" alt="Birthday Meme 1" width="300" style="border-radius: 12px; box-shadow: 0 4px 10px rgba(0,0,0,0.2);">
   
   <img src="https://i.postimg.cc/VdfSpYQc/Whats-App-Image-2025-04-12-at-8-11-47-PM-1.jpg" alt="Birthday Meme 2" width="300" style="border-radius: 12px; box-shadow: 0 4px 10px rgba(0,0,0,0.2);">
@@ -146,7 +149,10 @@
 <div id="letter" style="display:none; background:#fff0f5; padding:15px; margin-top:10px; border-radius:12px; box-shadow:0 4px 12px rgba(0,0,0,0.1); max-width:600px; text-align:left;">
   <p>Dear Princess,</p>
   <p>18 years of awesomness and being the most iconic person I know. This world is so lucky to have you — and I’m luckier.</p>
+  <p> with all the things weve been together, physically and virtually, I adore the life and soul out of you. Sara you are my sunshine, rain, snow, everything. seven seas apart and we're still thriving. <p>
+ <p> lmao try flirting with me now and watch me call the cops. jk bbg I would never do that, I'd be more than happy to have an official mommy as my bestie 😝🫶🏼 <p>
   <p>Keep being a queen, keep chasing your dreams, and never stop updating me.</p>
+  <p> p.s. this small thing took me DAYS to make. I hope you like it sweetheart, mwah<p>
   <p>Love alway,</p>
   <p>farha</p>
 </div>
